--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -1,4 +1,4 @@
-name: Auto Update Games
+name: Auto Organize & Update Games
 
 on:
   push:
@@ -6,35 +6,63 @@ on:
       - 'roms/**'
 
 jobs:
-  update-json:
+  organize-and-update:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      - name: Organize ROMs Automatically
+        run: |
+          mkdir -p roms/others
+
+          for file in roms/*; do
+            if [ -f "$file" ]; then
+              filename=$(basename "$file")
+
+              # Extract extension
+              extension="${filename##*.}"
+
+              # If no extension → others
+              if [ "$filename" = "$extension" ]; then
+                folder="others"
+              else
+                folder=$(echo "$extension" | tr '[:upper:]' '[:lower:]')
+              fi
+
+              mkdir -p "roms/$folder"
+              git mv "$file" "roms/$folder/$filename" 2>/dev/null || mv "$file" "roms/$folder/$filename"
+            fi
+          done
+
       - name: Generate JSON
         run: |
           echo "[" > 86games.json
           first=true
-          for file in $(find roms -type f); do
-            name=$(basename "$file")
-            console=$(echo "$file" | cut -d'/' -f2)
 
-            if [ "$first" = true ]; then
-              first=false
-            else
-              echo "," >> 86games.json
+          for file in roms/*/*; do
+            if [ -f "$file" ]; then
+              filename=$(basename "$file")
+              console=$(basename $(dirname "$file"))
+
+              if [ "$first" = true ]; then
+                first=false
+              else
+                echo "," >> 86games.json
+              fi
+
+              echo "  {\"name\": \"$filename\", \"console\": \"$console\", \"file\": \"$file\"}" >> 86games.json
             fi
-
-            echo "  {\"name\": \"$name\", \"console\": \"$console\", \"file\": \"$file\"}" >> 86games.json
           done
+
           echo "]" >> 86games.json
 
-      - name: Commit JSON
+      - name: Commit Changes
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
+          git add roms/
           git add 86games.json
-          git commit -m "Auto update games list" || echo "No changes"
+          git commit -m "Auto organize ROMs and update JSON" || echo "No changes"
           git push
